# fastapi-ddd-template

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/application/use_cases/: __init__.py  auth.py  post.py  user.py
app/core/: config.py  database.py  logging.py  security.py
app/domain/entities/: __init__.py  post.py  user.py
app/domain/repositories/: __init__.py  post.py  user.py
app/domain/services/: __init__.py  post.py  user.py
app/infrastructure/repositories/: __init__.py  post.py  user.py
app/presentation/: __init__.py
app/presentation/api/: auth.py  posts.py  router.py  users.py
app/presentation/dependencies/: __init__.py  auth.py  database.py
app/presentation/schemas/: __init__.py  auth.py  common.py  post.py  user.py
docker/: README.md  docker-compose.dev.yml  docker-compose.prod.yml
docker/grafana/dashboards/: dashboard.yml  fastapi-dashboard.json
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: README.md  README_ja.md  api.md  architecture.md  architecture_ja.md  deployment.md  development.md  development_ja.md  testing.md
scripts/: seed_data.py
tests/: conftest.py  test_auth_api.py
